# enterprise-rag-rbac

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
config/: rbac_config.json
data/sample_policies/engineering/: API_Development_Standards.md  CI_CD_Guidelines.md  Data_Flow_Overview.md  Logging_Standards.md  System_Architecture_Overview.md
data/sample_policies/hr/: Anti_Harassment_Policy.md  Code_of_Conduct.md  Employee_Handbook.md  Leave_and_Attendance_Policy.md  Performance_Review_Process.md  Workplace_Safety_Policy.md
data/sample_policies/legal_internal/: Data_Processing_Overview.md  Employee_NDA.md  Internal_IP_Policy.md  Records_Management_Statement.md  Vendor_Confidentiality_Terms.md
data/sample_policies/operations/: Business_Continuity_Plan.md  Disaster_Recovery_Runbook.md  Escalation_Matrix.md  Operational_KPIs.md  RACI_Matrix.md
data/sample_policies/policies/: Acceptable_Use_Policy.md  Access_Control_Policy.md  Data_Retention_Policy.md  Information_Security_Policy.md  Logging_and_Monitoring_Policy.md  Password_and_MFA_Policy.md  Remote_Work_Policy.md
data/sample_policies/risk_governance/: Compliance_Governance_Model.md  Enterprise_Risk_Register.md  Internal_Audit_Process.md  Metrics_and_Reporting_Framework.md  Policy_Exception_Process.md
data/sample_policies/security/: Risk_Assessment_Methodology.md  Security_Awareness_Training.md  Third_Party_Risk_Management.md  Threat_Modeling_Overview.md  (+1 more)
src/enterprise_rag/: __init__.py  auth.py  llm.py  rag_system.py  rbac.py  retriever.py  ui.py
(+8 files in other folders)
