[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-rag-rbac"
version = "1.0.0"
description = "Enterprise RAG with role-based access control, parent-child retrieval, and audit logging"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Datta Sai Krishna Naidu", email = "dattasai293@gmail.com" }]
keywords = ["rag", "rbac", "llm", "enterprise", "audit", "chromadb"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
enterprise_rag = ["py.typed"]
